Bug 152129 - Cannot move shape to left or upper adjacent position using (some) base points
Summary: Cannot move shape to left or upper adjacent position using (some) base points
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2022-11-19 19:09 UTC by Epo Nym
Modified: 2025-09-09 12:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Epo Nym 2022-11-19 19:09:44 UTC
Description:
Moving a shape to one of its adjacent positions can normally be done by copying the X- or Y-coordinate to itself after selecting another base point. For example, to move the shape to its right, you can select the top right base point, copy the X-coordinate, then select the top left base point, then paste the new X value. Now, this trick doesn't work anymore when moving to the left or upper direction. It does still work however for the right and lower directions.


Steps to Reproduce:
1. Place any shape, e.g. a rectangle.
2. Select RMB > "Position and Size...".
3. Notice the default base point is top left.
4. Copy the X-coordinate.
5. Select the top right base point (position).
6. Paste the value into the X-coordinate.
7. Click OK.

Actual Results:
The shape does not move.

Expected Results:
The shape should have moved to the left.


Reproducible: Always


User Profile Reset: No

Additional Info:
It does work when selecting the middle or lower left base point instead. So there's an easy workaround.
Comment 1 Stéphane Guillou (stragu) 2022-11-28 17:04:11 UTC
Reproduced with:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1fd42472e2b1a2169d56e62ef11aa7ee1f7815e7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Already in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Stéphane Guillou (stragu) 2022-11-28 17:05:08 UTC
Also Windows:

Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 3 QA Administrators 2024-11-28 03:12:59 UTC Comment hidden (obsolete)
Comment 4 Epo Nym 2024-11-28 22:00:57 UTC
Bug's first appearance in:

Version: 6.1.4.1
Build ID: 25073d18caee244880112e52c4a7e71f6081b3a9
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded


Bug not in:

Version: 6.1.3.2
Build ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded


Bug still in:

Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 Saburo 2025-01-23 10:04:04 UTC Comment hidden (obsolete)
Comment 6 Saburo 2025-01-24 05:24:04 UTC
bibisected with linux-64-6.1
first bad commit
source 8b141eb612a89a112b9bb11baeff32155e4a0150
Comment 7 Caolán McNamara 2025-09-09 09:34:20 UTC
The value in the spinbutton is the same so it thinks nothing has changed. But the position it is relative to has and that was ignored.
Comment 8 Caolán McNamara 2025-09-09 09:37:39 UTC
https://gerrit.libreoffice.org/c/core/+/190694 for that
Comment 9 Commit Notification 2025-09-09 12:04:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa46db406fd5c55c848e4d8984def0dc2df72c80

Resolves: tdf#152129 Save/IsChanged for the SvxRectCTL

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.